Blurry image fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-body
-{
-       background-image: url('./assets/datepicker-bg.jpg');
-       backdrop-filter: blur(5px);
+body,
+html {
+  height: 100%;
 }
-*
-{
-       color: white;
+
+body {
+  /* The image used */
+  background-image: url("./assets/datepicker-bg.jpg");
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
